--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,8 @@ test {
 }
 
 task collectDeps(type: Copy) {
+  group = 'vert.x'
+  description = 'conveniently collect dependencies for other IDEs'
   destinationDir = file("build/deps")
   into("compile") {
     from configurations.compile
@@ -75,3 +77,7 @@ task collectDeps(type: Copy) {
   }
 }
 
+task dist(dependsOn: ['build', 'packageVertxModule']) {
+  group = 'vert.x'
+  description = 'prepare a distributable busmod "mod.zip" package'
+}
