--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
   provided "com.foo:foo-lib:1.0.1" - if you DON'T want it to be packaged in the module zip
    */
   compile "javax.mail:mail:$javamailVersion"
+  compile 'commons-codec:commons-codec:1.2'
+  compile files('lib/DKIMforJavaMail.jar')
 }
 
 test {
