--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,17 @@
+# Your domain name
+modowner=io.vertx
+
+# Your module name
+modname=mod-mailer
+
+# Your module version
+version=2.0.0-SNAPSHOT
+
+# The test timeout
+testtimeout=300
+
+javamailVersion=1.4.4
+
 # Set to true if you want module dependencies to be pulled in and nested inside the module itself
 pullInDeps=false
 
