--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,6 @@ javamailVersion=1.4.4
 pullInDeps=false
 
 gradleVersion=1.4
-vertxVersion=2.0.0-CR1
+vertxVersion=2.0.0-CR4-SNAPSHOT
 toolsVersion=2.0.0-CR1
 junitVersion=4.10
