--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ modowner=io.vertx
 modname=mod-mailer
 
 # Your module version
-version=2.0.0-CR3-SNAPSHOT
+version=2.0.0-final
 
 # The test timeout
 testtimeout=300
@@ -16,6 +16,6 @@ javamailVersion=1.4.4
 pullInDeps=false
 
 gradleVersion=1.4
-vertxVersion=2.0.0-CR4-SNAPSHOT
-toolsVersion=2.0.0-CR1
+vertxVersion=2.0.0-final
+toolsVersion=2.0.0-final
 junitVersion=4.10
